--- a/cohort_analysis.ipynb
+++ b/cohort_analysis.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "e209e8c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip freeze > requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "bd3a4793",
    "metadata": {},
    "outputs": [
